docs: add full reference for dynamic-compose

--- a/src/content/docs/reference/breaking-updates.mdx
+++ b/src/content/docs/reference/breaking-updates.mdx
@@ -41,6 +41,10 @@ From now on, the folder structure will include a new sub-folder for each app-sto
   </FileTree.Folder>
 </FileTree>
 
+Runtipi now requires all apps in the configured app-stores to adhere to the dynamic-config definition.
+If you are running the default app-store there is no action to take. If you run a custom app-store you'll need to migrate your custom apps to use this configuration.
+See [dynamic-config documentation](/docs/reference/dynamic-compose) for more information.
+
 We have prepared a script that will automatically update your folder structure to the new format. You can run it by executing the following command in your `runtipi` directory:
 
 Inside the runtipi directory, download the script:
