feat: compose converter

--- a/src/content/docs/guides/dynamic-compose-guide.mdx
+++ b/src/content/docs/guides/dynamic-compose-guide.mdx
@@ -370,3 +370,14 @@ You can validate your dynamic compose configuration using the validator below:
   [Dynamic Compose Reference](/docs/reference/dynamic-compose) documentation.
 </Callout>
 
+## Docker Compose to Dynamic Config Converter
+
+Converting an existing `docker-compose.yml` file to Runtipi's dynamic compose format can be time-consuming and error-prone. We've created a tool to help you automatically convert your Docker Compose files to the dynamic compose format.
+
+<DockerComposeConverter placeholder="Paste your docker-compose.yml content here to convert it to dynamic compose format..." />
+
+<Callout type="warning">
+  The converter works for most cases, but please review the converted
+  configuration to ensure it meets your needs. Some advanced features may not be
+  fully supported.
+</Callout>
