--- a/src/content/docs/reference/dynamic-compose.mdx
+++ b/src/content/docs/reference/dynamic-compose.mdx
@@ -1,5 +1,5 @@
-import { Steps } from "nextra/components";
-import { JsonSchemaValidator } from "@/app/components";
+import { Steps, Callout } from "nextra/components";
+import { JsonSchemaValidator, DockerComposeConverter } from "@/app/components";
 import { toJsonSchema, dynamicComposeSchema } from "@runtipi/common/schemas";
 
 # Dynamic Compose Reference
@@ -16,6 +16,18 @@ You can validate your dynamic compose configuration using the validator below:
   schema={toJsonSchema(dynamicComposeSchema)}
   placeholder="Paste your dynamic compose configuration here to validate it..."
 />
+
+## Docker Compose to Dynamic Config Converter
+
+Converting an existing `docker-compose.yml` file to Runtipi's dynamic compose format can be time-consuming and error-prone. We've created a tool to help you automatically convert your Docker Compose files to the dynamic compose format.
+
+<DockerComposeConverter placeholder="Paste your docker-compose.yml content here to convert it to dynamic compose format..." />
+
+<Callout type="warning">
+  The converter works for most cases, but please review the converted
+  configuration to ensure it meets your needs. Some advanced features may not be
+  fully supported.
+</Callout>
 
 ## Configuration Options Reference
 
