chore: missing import

--- a/src/content/docs/guides/dynamic-compose-guide.mdx
+++ b/src/content/docs/guides/dynamic-compose-guide.mdx
@@ -1,5 +1,5 @@
 import { Steps, Callout } from "nextra/components";
-import { JsonSchemaValidator } from "@/app/components";
+import { JsonSchemaValidator, DockerComposeConverter } from "@/app/components";
 import { toJsonSchema, dynamicComposeSchema } from "@runtipi/common/schemas";
 
 # Creating a dynamic compose file
